# LabelingApp

./: .gitignore  CMakeLists.txt  InferenceTab.qml  LabelingTab.qml  Main.qml  RightPanel.qml  SettingsTab.qml  TrainingTab.qml  config.cpp  config.h  control.cpp  control.h  imagedisplay.cpp  imagedisplay.h  inferenceservice.cpp  inferenceservice.h  labelingservice.cpp  labelingservice.h  main.cpp  systemservice.cpp  systemservice.h  trainservice.cpp  trainservice.h
